# GNNspector

./: LICENSE  README.md  pyproject.toml  requirements.txt
gnnspector/: scanner.py
gnnspector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
